# business-rules

./: .drone.yml  .gitignore  .gitlab-ci.yml  .travis.yml  HISTORY.md  HISTORY.rst  LICENSE  MANIFEST.in  README.md  circle.yml  dev-requirements.txt  makefile  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: automatic-test.yml  release.yml  tests.yaml
business_rules/: __init__.py  actions.py  engine.py  fields.py  models.py  operators.py  utils.py  validators.py  variables.py
business_rules/manager/: action_manager.py
business_rules/service/: audit_service.py  log_service.py
business_rules/util/: compat.py  method_type.py
business_rules_bulk/: actions.py  engine.py  operators.py  utils.py  variables.py
tests/: __init__.py  actions.py  test_actions_class.py  test_engine_logic.py  test_get_actions_results.py  test_integration.py  test_operators.py  test_operators_class.py  test_runner.py  test_use.py  test_utils.py  test_variables.py  test_variables_class.py  variables.py
tests/example/: actions.py  basket.py  main.py  validators.py  variables.py
tests/integration/: test_rule_engine.py
tests/manager/: test_action_manager.py
tests/operators/: test_operators.py  test_operators_class.py  test_time_operator.py
tests/service/: test_log_service.py
tests/unit/: test_actions_class.py  test_engine_logic.py  test_integration.py  test_operators.py  test_operators_class.py  test_variables.py  test_variables_class.py
